src/MultiSelect/multiSelect.scss
@import '../common';

$padding-borders: 17px;
$tags-margin-bottom: 11px;
$wix-font-family-helvetica-45: "HelveticaNeueW01-45Ligh", "HelveticaNeueW02-45Ligh", "HelveticaNeueW10-45Ligh", sans-serif;

.multiSelectContainer {
  overflow: hidden;
}

.suggestionFocused {
  background-color: #eaf7ff;
  position: relative;
}

.container {
  position: relative;
  display: inline;
}

.inputField {
  @include FontThin();
  border: none;
  outline: none;
  font-size: 16px;
  color: #8090a2;
  display: inline-block;
  padding: 4px 16px 6px 0;
  margin-bottom: $tags-margin-bottom;
}

.inputField::-webkit-input-placeholder {
  color: $D50;
}

.lineSeparator {
  border-top: 1px solid #ebebeb;
  height: 1px;
  position: relative;
  z-index: 2; /*needs to be in front of the shadeSeparator*/
}

.suggestionsContainer {
  border: none;
}

.multiSelectContainer {
  @include FontThin();
  background: $D80;
  box-shadow: 0 5px 15px 0 rgba(55, 89, 116, 0.15);
  width: 430px;
  box-sizing: border-box;
  color: #8090a2;
  font-size: 16px;
}

.suggestionsList {
  list-style: none;
  padding: 0;
  cursor: pointer;
  margin: 0;
  padding-top: 14px;
}

.flexContainer {
  display: flex;
  padding: $padding-borders $padding-borders 0 $padding-borders;
}

.searchIcon {
  display: inline-block;
  background: url('../assets/search-icon.svg') no-repeat;
  background-size: contain;
  min-width: 13px;
  margin: 0 7px 0 0;
  position: relative;
  top: 8px;
}

.noSuggestions {
  min-height: 116px;
  padding: $padding-borders;
}

.scrollArea {
  max-height: 240px;
  overflow: scroll;
  margin-right: 5px;
}

::-webkit-scrollbar {
  background-color: transparent;
  width: 7px;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(182, 193, 205, 0.25);
  z-index: 1;
  position: relative;
  border-radius: 100px;
}

.scrollbarVerticalThumb {
  z-index: 1;
  border-radius: 100px;
  background-color: rgba(182, 193, 205, 0.5);
  right: 3px;
}

.shadeSeparatorTop {
  box-shadow: 0px 5px 25px 9px white;
  display: block;
  z-index: 1; /*needs to be in front of the listItems*/
  position: relative;
}

.shadeSeparatorBottom {
  box-shadow: 0px 4px 30px 12px white;
  display: block;
  position: relative;
}

.buttonsContainer {
  @include FontThin();
  display: flex;
  justify-content: flex-end;
  padding: 21px;
  position: relative;

  .doneButton {
    @include FontThin();
    background: none;
    border: none;
    color: #5cb4ff;
    font-size: 16px;
    outline: none;
    cursor: pointer;
  }

  .cancelButton {
    @include FontThin();
    background: none;
    border: none;
    color: $D30;
    font-size: 16px;
    outline: none;
    cursor: pointer;
  }
}

.tagsContainer {
  @include FontThin();
  display: inline;
  overflow: hidden;
  color: $D30;
  font-size: 16px;
}

.tag {
  @include FontLight();
  background-color: $B40;
  border-radius: 100px;
  display: inline-block;
  padding: 6px 16px 6px 16px;
  margin: 0 $tags-margin-bottom $tags-margin-bottom 0;

  .tagRemoveButton {
    cursor: pointer;
    font-weight: bold;
    padding-left: 10px;
    cursor: pointer;

    &:before {
      content: 'x'
    }
  }
}

